--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
       <h1>Ifeanyi Ojukwu | WDD 130</h1>
-      <img src="images/ify.jpg" alt="Hello, my name is Ifeanyi Ojukwu" width="200">
+      <img src="images/Ify.jpg" alt="Hello, my name is Ifeanyi Ojukwu" width="200">
       <p>Hello! My name is Ifeanyi Ojukwu and I am from Saint george, Utah. I enjoy ... </p>
     </main>
     <footer>
