--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </header>
     <main>
       <h1>Ifeanyi Ojukwu | WDD 130</h1>
-      <img src="./images/Ify.jpg" alt="Hello, my name is Ifeanyi Ojukwu" width="200">
-      <p>Hello! My name is Ifeanyi Ojukwu and I am from Saint george, Utah. I enjoy ... </p>
+      <img src="images/Ify.jpg" alt="Hello, my name is Ifeanyi Ojukwu" width="200">
+      <p>Hello! My name is Ifeanyi Ojukwu and I am from Saint george, Utah. I enjoy watching soccer ⚽ and cooking. </p>
     </main>
     <footer>
       <p>&copy;2023 ✅ Ifeanyi Ojukwu ✅ Utah.</p>
