Course Home Page Enhancement

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="Ifeanyi, WDD130, This is site for displaying natural images and other contents.">
+    <meta name="author" content="Ifeanyi Ojukwu">
     <title>Ifeanyi Ojukwu | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
   </head>
@@ -19,6 +21,11 @@
       <img src="images/Ify.jpg" alt="Hello, my name is Ifeanyi Ojukwu" width="200">
       <p>Hello! My name is Ifeanyi Ojukwu and I am from Saint george, Utah. I enjoy watching soccer ⚽ and cooking. </p>
     </main>
+    <aside>
+      <h2>Utah</h2>
+      <img src="images/utah.jpg" alt="Utah landscape">
+      <p>Utah is a state located in the western region of the United States. It is known for its diverse landscape, which includes rugged mountains, vast deserts, and stunning national parks. Utah is home to several world-renowned ski resorts and is a popular destination for outdoor enthusiasts. Utah is also known for its strong conservative religious values, with the majority of the population identifying as members of the Church of Jesus Christ of Latter-day Saints.</p>
+    </aside>
     <footer>
       <p>&copy;2023 ✅ Ifeanyi Ojukwu ✅ Utah.</p>
     </footer>
