Enhancing My Course Home Page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--Last Modified date : March 6, 2023-->
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
@@ -13,15 +14,23 @@
       <nav>
         <a href="#">Home</a>
         <a href="wwr/">White Water Rafting Website</a>
-        <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+        <a href="wwr/site-plan-rafting.html" target="_blank">White Water Rafting Siteplan</a>
+        <a href=" https://linkedin.com" target="_blank">Linkedin Profile</a>
+        <a href="https://facebook.com">Facebook</a>
+
       </nav>
     </header>
     <main>
       <h1>Ifeanyi Ojukwu | WDD 130</h1>
-      <img src="images/Ify.jpg" alt="Hello, my name is Ifeanyi Ojukwu" width="200">
-      <p>Hello! My name is Ifeanyi Ojukwu and I am from Saint george, Utah. I enjoy watching soccer ⚽ and cooking. </p>
+      <img src="images/Ify.jpg" alt="Hello, my name is Ifeanyi Ojukwu">
+      <p>Hello! My name is Ifeanyi Ojukwu and I live in Saint george, Utah. I was born in the city of Lagos, Nigeria. I have lots of hobbies like playing and watching soccer ⚽, which is know as football in Africa, and I love cooking too. </p><br><br><br>
+      <ul class="box">
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple" target="_blank">Aba Nigeria Temple</a></li>
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/anchorage-alaska-temple" target="_blank">Anchorage Alaska Temple</a></li>
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/baton-rouge-louisiana-temple" target="_blank">Baton Rouge Louisiana Temple</a></li>
+      </ul>
     </main>
-    <aside>
+    <aside class="box">
       <h2>Utah</h2>
       <img src="images/utah.jpg" alt="Utah landscape">
       <p>Utah is a state located in the western region of the United States. It is known for its diverse landscape, which includes rugged mountains, vast deserts, and stunning national parks. Utah is home to several world-renowned ski resorts and is a popular destination for outdoor enthusiasts. Utah is also known for its strong conservative religious values, with the majority of the population identifying as members of the Church of Jesus Christ of Latter-day Saints.</p>
