--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <a href="#">Home</a>
         <a href="wwr/">White Water Rafting Website</a>
         <a href="wwr/site-plan-rafting.html" target="_blank">White Water Rafting Siteplan</a>
-        <a href=" https://linkedin.com" target="_blank">Linkedin Profile</a>
+        <a href=" https://linkedin.com" target="_blank">Linkedin Profile
+          
+        </a>
         <a href="https://facebook.com">Facebook</a>
 
       </nav>
