--- a/wwr/about.html
+++ b/wwr/about.html
@@ -20,14 +20,14 @@
       </header>
       <main>
         <div class="hero">
-            <img src="images/image.jpg">
-            <h1>Ify Rafting Company</h1>
-            <article>
-                <img src="images/happy.jpg">
-                <p>Our purpose and mission is to provide customers/clients with an exciting and memorable outdoor experience by offering guided rafting trips on rivers and other bodies of water.</p>
+            <img src="images/image.jpg" alt="Hero Image" class="hero-image">
+            <h1 class="hero-title">Ify Rafting Company</h1>
+            <article class="hero-article">
+              <img src="images/happy.jpg" alt="Article Image" class="article-image">
+              <p>Our purpose and mission is to provide customers/clients with an exciting and memorable outdoor experience by offering guided rafting trips on rivers and other bodies of water.</p>
             </article>
-        </div>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+          </div>
+          
         <section>
             <h2>History</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil provident reprehenderit animi nostrum aut est, eius libero sed.</p>
