--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The rafting site plan includes recreational activities for adventure-seeking individuals.">
     <meta name="author" content="Ifeanyi Ojukwu">
-    <title>Ify Rafting Company | Ifeanyi Ojukwu </title>
+    <title>About Us </title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
