--- a/wwr/about.html
+++ b/wwr/about.html
@@ -24,7 +24,7 @@
             <h1 class="hero-title">Ify Rafting Company</h1>
             <article class="hero-article">
               <img src="images/happy.jpg" alt="Article Image" class="article-image">
-              <p>Our purpose and mission is to provide customers/clients with an exciting and memorable outdoor experience by offering guided rafting trips on rivers and other bodies of water.</p>
+              <p><h4>Our purpose and mission is to provide customers/clients with an exciting and memorable outdoor experience by offering guided rafting trips on rivers and other bodies of water.</h4></p>
             </article>
           </div>
           
@@ -34,11 +34,11 @@
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
-            <img src="images/image1.jpg">
-            <img src="images/image2.jpg">
-            <img src="images/image3.jpg">
-            <img src="images/image4.jpg">
-            <img src="images/image5.jpg">
+            <img src="images/image1.jpg" alt="Adventure">
+            <img src="images/image2.jpg" alt="Adventure">
+            <img src="images/image3.jpg" alt="Adventure">
+            <img src="images/image4.jpg" alt="Adventure">
+            <img src="images/image5.jpg" alt="Adventure">
         </section>
 
       </main>
