--- a/wwr/about.html
+++ b/wwr/about.html
@@ -24,7 +24,7 @@
             <h1 class="hero-title">Ify Rafting Company</h1>
             <article class="hero-article">
               <img src="images/happy.jpg" alt="Article Image" class="article-image">
-              <p><h4>Our purpose and mission is to provide customers/clients with an exciting and memorable outdoor experience by offering guided rafting trips on rivers and other bodies of water.</h4></p>
+              <p>Our purpose and mission is to provide customers/clients with an exciting and memorable outdoor experience by offering guided rafting trips on rivers and other bodies of water.</p>
             </article>
           </div>
           
