--- a/wwr/about.html
+++ b/wwr/about.html
@@ -23,6 +23,7 @@
             <img src="images/image.jpg" alt="Hero Image" class="hero-image">
             <h1 class="hero-title">Ify Rafting Company</h1>
             <article class="hero-article">
+                <h2 class="article-heading" style="display: none;">Our Mission</h2>
               <img src="images/happy.jpg" alt="Article Image" class="article-image">
               <p>Our purpose and mission is to provide customers/clients with an exciting and memorable outdoor experience by offering guided rafting trips on rivers and other bodies of water.</p>
             </article>
