--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
 
       </nav>
     </header>
+    <div class="grid">
     <main>
       <h1>Ifeanyi Ojukwu | WDD 130</h1>
       <img src="images/Ify.jpg" alt="Hello, my name is Ifeanyi Ojukwu">
-      <p>Hello! My name is Ifeanyi Ojukwu and I live in Saint george, Utah. I was born in the city of Lagos, Nigeria. I have lots of hobbies like playing and watching soccer ⚽, which is know as football in Africa, and I love cooking too. </p><br><br><br>
+      <p>Hello! My name is Ifeanyi Ojukwu and I live in Saint george, Utah. I was born in the city of Lagos, Nigeria. I have lots of hobbies like playing and watching soccer ⚽, which is know as football in Africa, and I love cooking too. </p>
       <ul class="box">
         <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple" target="_blank">Aba Nigeria Temple</a></li>
         <li><a href="https://www.churchofjesuschrist.org/temples/details/anchorage-alaska-temple" target="_blank">Anchorage Alaska Temple</a></li>
@@ -37,6 +38,7 @@
       <img src="images/utah.jpg" alt="Utah landscape">
       <p>Utah is a state located in the western region of the United States. It is known for its diverse landscape, which includes rugged mountains, vast deserts, and stunning national parks. Utah is home to several world-renowned ski resorts and is a popular destination for outdoor enthusiasts. Utah is also known for its strong conservative religious values, with the majority of the population identifying as members of the Church of Jesus Christ of Latter-day Saints.</p>
     </aside>
+    </div>
     <footer>
       <p>&copy;2023 ✅ Ifeanyi Ojukwu ✅ Utah.</p>
     </footer>
