--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -30,11 +30,11 @@
       
         <h3>Color Palette</h3>
         <p>
-            primary-264653
-            secondary-2A9D8F
-            accent1-F4A261
-            accent2-E76F51
-            Palette URL: <a href="https://coolors.co/palette/264653-2a9d8f-f4a261-e76f51" target="_blank">https://coolors.co/palette/264653-2a9d8f-f4a261-e76f51</a>
+            primary-E63946
+            secondary-A8DADC
+            accent1-457B9D
+            accent2-1D3557
+            Palette URL: <a href="https://coolors.co/palette/e63946-a8dadc-457b9d-1d3557" target="_blank">https://coolors.co/palette/e63946-a8dadc-457b9d-1d3557</a>
         </p>
         <h3>Typography: Merriweather & Roboto</h3>
         <h4>Headings Example Font</h4>
