--- a/wwr/about.html
+++ b/wwr/about.html
@@ -32,7 +32,7 @@
             </article>
           </div>
         
-        <section class="grid">
+        <section class="grid2">
             <figure class="history"><img src="images/image3.jpg" alt="Article Image" class="article-image"><figcaption>History</figcaption></figure>
             <p>Ify Rafting Company was founded in 1995 by Ify, a passionate and experienced outdoorsman. Having grown up near a river and spending most of his childhood on the water, Ify wanted to share his love of rafting with others.
 
@@ -44,11 +44,11 @@
         <section>
           <h2 class="h2set">Adventure Awaits You!</h2>
           <div class="image-grid">
-            <img src="images/image1.jpg" alt="Adventure">
-            <img src="images/image2.jpg" alt="Adventure">
-            <img src="images/image3.jpg" alt="Adventure">
-            <img src="images/image4.jpg" alt="Adventure">
-            <img src="images/image5.jpg" alt="Adventure">
+          <figure class="adventure"><img src="images/image1.jpg" alt="Adventure"><figcaption>Paddle hard</figcaption></figure>
+          <figure class="adventure"><img src="images/image2.jpg" alt="Adventure"><figcaption>White water rush</figcaption></figure>
+          <figure class="adventure"><img src="images/image3.jpg" alt="Adventure"><figcaption>Thrill-seeking adventure</figcaption></figure>
+          <figure class="adventure"><img src="images/image4.jpg" alt="Adventure"><figcaption>Rocky rapids ahead</figcaption></figure>
+          <figure class="adventure"><img src="images/image5.jpg" alt="Adventure"><figcaption>Life jackets on</figcaption></figure>
           </div>
         </section>
       
