--- a/wwr/about.html
+++ b/wwr/about.html
@@ -33,6 +33,7 @@
           </div>
         
         <section class="grid2">
+          <h2 style="display: none;"></h2>
             <figure class="history"><img src="images/image3.jpg" alt="Article Image" class="article-image"><figcaption>History</figcaption></figure>
             <p>Ify Rafting Company was founded in 1995 by Ify, a passionate and experienced outdoorsman. Having grown up near a river and spending most of his childhood on the water, Ify wanted to share his love of rafting with others.
 
