--- a/quiz.html
+++ b/quiz.html
@@ -5,29 +5,30 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta name="description" content="Ifeanyi, WDD130, This is site for displaying natural images and other contents.">
         <meta name="author" content="Ifeanyi Ojukwu">
-        <title>QUIZ | WDD 130</title>
+        <title>HTML & CSS QUIZ</title>
         <link rel="stylesheet" href="styles/quiz.css">
       </head>
 <body>
-    <p id="p1">Basic Website Quiz</p>
+    <h1 id="p1">Basic Website Quiz</h1>
     <div id="design">
     <form id="quiz">
        
            
             <br>
-        1. Have you built a website before?
+        <label for="q1">1. Have you built a website before?</label>
         <p><input type="text" name="q1" id="q1" placeholder="Have you built a website before?"></p>
-        2. Is PHP a language you will like to leanr later? Why?
-        <p><textarea name="q2" id="q2"  placeholder="Is PHP a language you will like to leanr later? Why>"></textarea></p>
-        3.Which of the following is a valid coding language?
-        <p></p><select name="q3" id="q3">
+        <label for="q2">2. Is PHP a language you will like to leanr later? Why?</label>
+        <p><textarea name="q2" id="q2"  placeholder="Is PHP a language you will like to leanr later? Why?"></textarea></p>
+        <label for="q3">3.Which of the following is a valid coding language?</label>
+        <p></p><select name="q3" id="q3" >
         <option value="" selected disabled>Choose one</option>
         <option value="1" >PHP</option>
         <option value="2" >MysQl</option>
         <option value="3" >Python</option>
-        </select></p>
-        4. What does the Acronym of CSS sands for?
-        <p><input type="text" name="q4" id="q4" placeholder=" What does the Acronym of CSS sands for?"></p>
+        <option value="4" >CSS</option>
+        </select>
+        <label for="q4">4. How many years of CSS do you have?</label>
+        <p><input type="number" name="q4" id="q4" placeholder="How many years of CSS do you have?" required></p>
 
         <p><input type="submit" id="submit" value="Submit Quiz"></p>
     </form>
