--- a/quiz.html
+++ b/quiz.html
@@ -26,7 +26,7 @@
         <option value="2" >MysQl</option>
         <option value="3" >Python</option>
         <option value="4" >CSS</option>
-        </select>
+        </select><br>
         <label for="q4">4. How many years of CSS do you have?</label>
         <p><input type="number" name="q4" id="q4" placeholder="How many years of CSS do you have?" required></p>
 
