--- a/wwr/about.html
+++ b/wwr/about.html
@@ -45,11 +45,11 @@
         <section>
           <h2 class="h2set">Adventure Awaits You!</h2>
           <div class="image-grid">
-          <figure class="adventure"><img src="images/image1.jpg" alt="Adventure"><figcaption>Paddle hard</figcaption></figure>
-          <figure class="adventure"><img src="images/image2.jpg" alt="Adventure"><figcaption>White water rush</figcaption></figure>
-          <figure class="adventure"><img src="images/image3.jpg" alt="Adventure"><figcaption>Thrill-seeking adventure</figcaption></figure>
-          <figure class="adventure"><img src="images/image4.jpg" alt="Adventure"><figcaption>Rocky rapids ahead</figcaption></figure>
-          <figure class="adventure"><img src="images/image5.jpg" alt="Adventure"><figcaption>Life jackets on</figcaption></figure>
+          <figure class="adventure"><a href="images/image1.jpg" target="_blank"><img src="images/image1.jpg" alt="Adventure"></a><figcaption>Paddle hard</figcaption></figure>
+          <figure class="adventure"><a href="images/image2.jpg" target="_blank"><img src="images/image2.jpg" alt="Adventure"></a><figcaption>White water rush</figcaption></figure>
+          <figure class="adventure"><a href="images/image3.jpg" target="_blank"><img src="images/image3.jpg" alt="Adventure"></a><figcaption>Thrill-seeking adventure</figcaption></figure>
+          <figure class="adventure"><a href="images/image4.jpg" target="_blank"><img src="images/image4.jpg" alt="Adventure"></a><figcaption>Rocky rapids ahead</figcaption></figure>
+          <figure class="adventure"><a href="images/image5.jpg" target="_blank"><img src="images/image5.jpg" alt="Adventure"></a><figcaption>Life jackets on</figcaption></figure>
           </div>
         </section>
       
