--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Ify Rafting company contact page">
     <link rel="icon" type="image/x-icon" href="images/logo.jpg">
     <meta name="author" content="Ifeanyi Ojukwu">
-    <title>Ify Rafting company Contact page </title>
+    <title>Contact us | Ify Rafting company</title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
