--- a/wwr/index.html
+++ b/wwr/index.html
@@ -14,14 +14,14 @@
       <div class ="grid">
         <img src="images/logo.jpg" alt="Rafting Site Logo" width="100">
         <nav>
-            <a href="index.html" target="_blank"> Home </a>
-            <a href="about.html" target="_blank"> About Us </a>
-            <a href="trips.html" target="_blank"> Trips</a>
-            <a href="contact.html" target="_blank">Contact us</a>
+            <a href="index.html" class="active-link" style="color: #E63946;"> Home </a>
+            <a href="about.html"> About Us </a>
+            <a href="trips.html" > Trips</a>
+            <a href="contact.html">Contact us</a>
         </nav>
       </div>
       </header>
-      <section class="home">
+      <section class="home" style="background-image: url('images/bg.jpg');">
        <div class="content">
         <h2 class="font-h2">Come Raft With Us</h2>
         <p class="p-m">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores architecto aspernatur iusto deserunt numquam. Beatae, excepturi fugit ullam incidunt aperiam aliquam expedita reiciendis soluta reprehenderit hic vero deserunt est ratione.</p>
