--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -14,11 +14,11 @@
       <div class ="grid">
         <img src="images/logo.jpg" alt="Rafting Site Logo" width="100">
         <nav>
-            <a href="index.html" target="_blank"> Home </a>
-            <a href="about.html" target="_blank"> About Us </a>
-            <a href="trips.html" target="_blank"> Trips</a>
-            <a href="contact.html" target="_blank">Contact us</a>
-        </nav>
+          <a href="index.html"> Home </a>
+          <a href="about.html"> About Us </a>
+          <a href="trips.html" class="active-link" style="color: #E63946;"> Trips</a>
+          <a href="contact.html">Contact us</a>
+      </nav>
       </div>
       </header>
       <main>
