--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -94,7 +94,7 @@
           <h2 style="display: none;">none</h2>
           <h3 style="font-style: italic;"> Best Rafting adventure experience  </h3>
           <br>
-          <form action="contact.html"><input type="submit" value="Contact us for more!!!!" class="cta-btn"  target="_blank"></form><br>
+          <form action="contact.html"><input type="submit" value="Contact us for more!!!!" class="cta-btn" ></form><br>
         </section>
       </main>
       <footer>
